# Hackathon-II

Phase-I-Todo-App/: .gitignore  README.md  demonstration.py  final_verification.py  pyproject.toml  test_integration.py
Phase-I-Todo-App/.qwen/agents/: todo-spec-guardian.md
Phase-I-Todo-App/.specify/memory/: constitution.md
Phase-I-Todo-App/history/prompts/console-todo-app/: 2-console-todo-app-spec.spec.prompt.md  3-console-todo-app-plan.plan.prompt.md  4-console-todo-app-tasks.tasks.prompt.md  5-console-todo-app-implementation.tasks.prompt.md  6-console-todo-app-clarifications.spec.prompt.md  7-console-todo-app-planning.plan.prompt.md  8-console-todo-app-tasks.tasks.prompt.md  9-console-todo-app-implementation.tasks.prompt.md
Phase-I-Todo-App/history/prompts/constitution/: 1-todo-platform-constitution.constitution.prompt.md
Phase-I-Todo-App/specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Phase-I-Todo-App/specs/001-console-todo-app/checklists/: requirements.md
Phase-I-Todo-App/specs/001-console-todo-app/contracts/: README.md
Phase-I-Todo-App/src/: main.py
Phase-I-Todo-App/src/cli/: cli_interface.py
Phase-I-Todo-App/src/models/: todo.py
Phase-I-Todo-App/src/repositories/: todo_repository.py
Phase-I-Todo-App/src/services/: base_service.py  todo_service.py
Phase-I-Todo-App/src/utils/: errors.py  formatters.py  helpers.py  validators.py
Phase-I-Todo-App/tests/integration/: test_end_to_end.py
Phase-I-Todo-App/tests/unit/: test_todo.py  test_todo_repository.py  test_todo_service.py
(+104 files in other folders)
