[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "console-todo-app"
version = "0.1.0"
description = "A command-line Todo application that stores all tasks in memory"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
console-todo = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]